@@ -2,7 +2,13 @@
 
 Dies ist der Beispielcode zu dem Artikel über Java 20 im LinuxMagazin 6/2023.
 
+### Beispiele
 
+* [de/groygroy/java20/Listing1.java](src/main/java/de/groygroy/java20/Listing1.java) Record Patterns, Pattern Matching
+* [de/groygroy/java20/ServerKlasse.java](src/main/java/de/groygroy/java20/ServerKlasse.java) Scoped Values
+* [module-info.java](src/main/java/module-info.java) Verweis auf benötigtes `jdk.incubator.concurrent` Modul
 
+### Kompilieren und Laufenlassen
 
-
+Der Code benötigt eine Java 20 Installation. 
+Beim Kompilieren wie beim Laufenlassen muss die Option ``--enable-preview`` mit angegeben werden.
